Adds server + TcpClient (not working), network stats.
TcpClient is currently disabled.

--- a/app/src/main/res/xml/settings_preferences.xml
+++ b/app/src/main/res/xml/settings_preferences.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:key="@string/preferences_log_csv"
-        android:title="Log Values as CSV" />
+    <PreferenceCategory android:title="Server">
+
+    </PreferenceCategory>
     <EditTextPreference
         android:defaultValue="192.168.0.1"
         android:key="@string/preferences_dmxserver_ip"
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:title="DMX Server IP" />
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="@string/preferences_coordinate"
+        android:title="Coordinate with Server" />
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="@string/preferences_stream"
+        android:title="Stream DMX signal" />
+    <PreferenceCategory android:title="Debugging">
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/preferences_log_csv"
+            android:title="Log Values as CSV" />
+    </PreferenceCategory>
 </PreferenceScreen>
